--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	],
 	"packageManager": "pnpm@9.0.4+sha256.caa915eaae9d9aefccf50ee8aeda25a2f8684d8f9d5c6e367eaf176d97c1f89e",
 	"scripts": {
-		"start": "cd packages/nuxt-web-app && pnpm dev"
+		"start": "cd packages/vue-web-app && pnpm dev"
 	},
 	"dependencies": {
 		"typesaurus": "^10.7.0"
