--- a/packages/vue-web-app/package.json
+++ b/packages/vue-web-app/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^12.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.6",
     "radix-vue": "^1.9.11",
