--- a/packages/vue-web-app/package.json
+++ b/packages/vue-web-app/package.json
@@ -14,6 +14,7 @@
     "@internationalized/date": "^3.6.0",
     "@vee-validate/zod": "^4.14.7",
     "@vueuse/core": "^12.0.0",
+		"@repo/utils": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
