--- a/packages/vue-web-app/package.json
+++ b/packages/vue-web-app/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@internationalized/date": "^3.6.0",
+    "@repo/utils": "workspace:*",
     "@vee-validate/zod": "^4.14.7",
     "@vueuse/core": "^12.0.0",
-		"@repo/utils": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.5.1",
     "firebase": "^11.1.0",
     "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.6",
